# Todo_Application_QT

./: README.md
todo/: CMakeLists.txt  CMakeLists.txt.user.8ed6ab3  CMakeLists.txt.user.d0f0134  Main.qml  main.cpp  networkcontroller.cpp  networkcontroller.h  todo.cpp  todo.h
web_server/: app.py  todo.json
